Fix position of the Send button with WebKit.
* wrap/python/ajax/css/ltl2tgba.css: Fix position of the "Send"
button with WebKit.  The folding arrow icon had a vertical border
that overlapped with the next line.

--- a/wrap/python/ajax/css/ltl2tgba.css
+++ b/wrap/python/ajax/css/ltl2tgba.css
@@ -6,12 +6,13 @@ html {overflow-y:scroll;}
 }
 
 input.formula {
-    width: 700px;
+    width: 720px;
 }
 
 span#send {
     width: 60px;
     margin-left: 4px;
+    margin-right: 0px;
 }
 
 .shadow {
@@ -70,7 +71,7 @@ div.ltl2tgba {
 
 .ltl2tgba .head .ui-icon {
     float: right;
-    margin: 0.2em 0px;
+    margin: 1px 0px;
 }
 
 .ltl2tgba .formula, #tiptip_content .formula {
